
Copyright (c) 1998-2009 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.37.6 - November 30, 2009

    Added support for runtime instantiation of the <</2 control construct
    arguments.

    Added support for specifying multiple initialization/1 directives when
    using the create_object/4, create_category/4, and create_protocol/3
    built-in predicates.

    Corrected a bug where some entity properties would not be set when using
    the create_object/4, create_category/4, and create_protocol/3 built-in
    predicates.

    Corrected a bug (introduced in version 2.37.4) when simplifying calls
    to the {}/1 external call control construct with a variable argument.

    Updated the Logtalk compiler to workaround file path problems with
    back-end Prolog compilers (e.g. SICStus Prolog) where calls to the
    open/3-4 built-in predicate are not always relative to the current
    working directory.

    Updated the ECLiPSe, SICStus Prolog, SWI-Prolog, and YAP config files
    in order to detect discontiguous predicate clause warnings and update
    the Logtalk warnings counter accordingly.

    Corrected a bug in the ECLiPSe config files in the definition of the
    predicate '$lgt_current_time'/3 where the number of seconds would be
    returned as a float instead of as an integer.

    Updated the SICStus Prolog config files in order to support settings
    files. Updated the SICStus Prolog 4.x config file in order to use the
    new "version_data" flag and recognize the new do/2 meta-predicate added
    in version 4.1.

    Updated the library support for unit testing in order to allow per-test
    setup and cleanup goals and to provide timing, testing file information,