@@ -15,6 +15,12 @@ RELEASE NOTES
 
 2.37.6 - November 30, 2009
 
+    Added support for using the set_logtalk_flag/2 directive within Logtalk
+    entities. This allows e.g. easy setting of entity properties such as
+    "events" when creating new entities using the entity creation built-in
+    predicates. Updated documentation on the set_logtalk_flag/2 directive
+    and built-in predicate exceptions.
+
     Added support for runtime instantiation of the <</2 control construct
     arguments.
 
